--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "preferGlobal": true,
   "bin": {
-    "gcpu": "./index"
+    "gcpu": "./index.js"
   },
   "repository": {
     "type": "git",
